--- a/css/third.css
+++ b/css/third.css
@@ -14,7 +14,7 @@ h1{
 .images{
 	height: 480px;
 	width: 480px;
-	background-size: cover;
+	background-size: 100% 100%;
 	margin: auto;
 	margin-top: 1%;
 	align-content: center;
