--- a/css/first.css
+++ b/css/first.css
@@ -4,11 +4,21 @@ html{
 }
 
 h1{
-	font-size: 5vh;
+	font-size: 10vw;
+	font-family: 'Roboto', sans-serif;
+}
+
+p {
+	font-family: 'Lato', sans-serif;
+}
+
+.hint {
+	font-size: 2vw;
+	text-align: justify;
 }
 
 .question {
-	font-size: 2vh;
+	font-size: 5vw;
 }
 
 .images{
@@ -34,10 +44,12 @@ h1{
 	margin-left: 2.5%;
 	margin-right: 2.5%;
 	margin-top: 5%;
+	border-radius: 15px;
+	border-color: black;
 }
 
 .text {
-	font-size: 2vh;
+	font-size: 5vw;
 }
 
 .button1  {
