--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 h1 {
-    font-size: 8vh;
+    font-size: 15vw;
+    font-family: 'Roboto', sans-serif;
 }
 
 #button {
@@ -8,8 +9,19 @@ h1 {
 	margin-left: 2.5%;
 	margin-right: 2.5%;
 	margin-top: 5%;
+	border-radius: 15px;
+	border-color: black;
+
 }
 
 .text {
-	font-size: 2vh;
+	font-size: 5vw;
+	font-family: 'Lato', sans-serif;
 }
+
+.logo {
+	height: 95%;
+	width: 95%;
+}
+
+
